Minor changes due to tool observations.